Fix bulk action toolbar alignment.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -15,7 +15,7 @@
 
 header .container.navbar { margin-bottom: 0; }
 
-.bulkActionButtons label {display: inline-block;}
+.bulkActionButtons .checkbox {display: inline-block;}
 .bulkActionButtons label input {margin-top: 2px;}
 .grid { @media (max-width: 767px) {min-height: 250px;} }
 .result {
